--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=ecommerce
+server.port=8081
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/intern_DB?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#spring security
+spring.security.user.name= ${SPRING_SECURITY_USERNAME}
+spring.security.user.password=${SPRING_SECURITY_PASSWORD}
