--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#spring security
-spring.security.user.name= ${SPRING_SECURITY_USERNAME}
-spring.security.user.password=${SPRING_SECURITY_PASSWORD}
+##spring security
+#spring.security.user.name= ${SPRING_SECURITY_USERNAME}
+#spring.security.user.password=${SPRING_SECURITY_PASSWORD}
