--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.show-sql=true
 ##spring security
 #spring.security.user.name= ${SPRING_SECURITY_USERNAME}
 #spring.security.user.password=${SPRING_SECURITY_PASSWORD}
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
