--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-##spring security
-#spring.security.user.name= ${SPRING_SECURITY_USERNAME}
-#spring.security.user.password=${SPRING_SECURITY_PASSWORD}
-
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+# Map<String, String> for the url to entityName matching:
+entity.mappings.products=Product
+entity.mappings.orders=Order
+entity.mappings.customers=Customer
